# sudoku_hs

./: README.md  sudoku-hs.cabal
app/: Main.hs
python/: sudoku.py
src/: Parser.hs  Sudoku.hs  sudoku.lhs
test/: Main.hs
