cabal-version:      3.0
name:               sudoku-hs
version:            0.1.0.0

common warnings
    ghc-options: -O2 -Wall

library
    import:           warnings
    exposed-modules:  Sudoku,
                      Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable sudoku-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        deepseq,
        sudoku-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite sudoku-hs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        hspec,
        sudoku-hs
